--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -560,7 +560,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8UQ-X3-ke0">
-                                <rect key="frame" x="30" y="280" width="540" height="221"/>
+                                <rect key="frame" x="30" y="205" width="540" height="66"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add ingredient to list :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gnn-uV-R7I">
                                         <rect key="frame" x="54" y="0.0" width="432" height="22"/>
@@ -571,43 +571,54 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="start typing an ingredient name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1W7-oK-75p">
-                                        <rect key="frame" x="54" y="22" width="432" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="IBl-E8-ixb"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
-                                    </textField>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dCe-Xk-lEw">
-                                        <rect key="frame" x="54" y="62" width="432" height="159"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </tableView>
+                                    <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="e8j-M3-G8i">
+                                        <rect key="frame" x="54" y="22" width="432" height="44"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
                                 </subviews>
                                 <color key="backgroundColor" red="0.46432637710000002" green="0.83866794580000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="1W7-oK-75p" firstAttribute="width" secondItem="8UQ-X3-ke0" secondAttribute="width" multiplier="0.8" id="bCP-W7-oFo"/>
-                                    <constraint firstItem="dCe-Xk-lEw" firstAttribute="width" secondItem="8UQ-X3-ke0" secondAttribute="width" multiplier="0.8" id="dGm-EN-6Rf"/>
+                                    <constraint firstItem="e8j-M3-G8i" firstAttribute="width" secondItem="8UQ-X3-ke0" secondAttribute="width" multiplier="0.8" id="40n-vJ-u9v"/>
                                     <constraint firstItem="Gnn-uV-R7I" firstAttribute="width" secondItem="8UQ-X3-ke0" secondAttribute="width" multiplier="0.8" id="izr-B3-TVd"/>
                                 </constraints>
                             </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dCe-Xk-lEw">
+                                <rect key="frame" x="84" y="271" width="432" height="230"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchResultCell" id="Lrj-Rp-rIZ">
+                                        <rect key="frame" x="0.0" y="28" width="432" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lrj-Rp-rIZ" id="hma-e5-qCY">
+                                            <rect key="frame" x="0.0" y="0.0" width="432" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="8uN-zZ-bpZ" firstAttribute="leading" secondItem="VdV-X2-kho" secondAttribute="leadingMargin" constant="10" id="7YS-AR-miC"/>
                             <constraint firstItem="8uN-zZ-bpZ" firstAttribute="top" secondItem="bJE-pU-1DB" secondAttribute="bottom" constant="24" id="Dek-lT-SF6"/>
+                            <constraint firstItem="dCe-Xk-lEw" firstAttribute="centerX" secondItem="VdV-X2-kho" secondAttribute="centerX" id="TZH-vO-kHv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8uN-zZ-bpZ" secondAttribute="trailing" constant="10" id="XXB-le-ZdA"/>
-                            <constraint firstItem="8UQ-X3-ke0" firstAttribute="height" secondItem="VdV-X2-kho" secondAttribute="height" multiplier="0.4" id="n8T-OY-uEr"/>
+                            <constraint firstItem="dCe-Xk-lEw" firstAttribute="top" secondItem="8UQ-X3-ke0" secondAttribute="bottom" id="eH6-fs-mOo"/>
                             <constraint firstItem="8UQ-X3-ke0" firstAttribute="leading" secondItem="VdV-X2-kho" secondAttribute="leadingMargin" constant="10" id="pyl-wO-myx"/>
-                            <constraint firstItem="rDe-yX-Nj2" firstAttribute="top" secondItem="8UQ-X3-ke0" secondAttribute="bottom" constant="50" id="uTY-s6-la4"/>
+                            <constraint firstItem="dCe-Xk-lEw" firstAttribute="width" secondItem="8UQ-X3-ke0" secondAttribute="width" multiplier="0.8" id="qoo-rb-R9r"/>
+                            <constraint firstItem="rDe-yX-Nj2" firstAttribute="top" secondItem="8UQ-X3-ke0" secondAttribute="bottom" constant="280" id="uTY-s6-la4"/>
+                            <constraint firstItem="rDe-yX-Nj2" firstAttribute="top" secondItem="dCe-Xk-lEw" secondAttribute="bottom" constant="50" id="udS-eT-aLC"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8UQ-X3-ke0" secondAttribute="trailing" constant="10" id="zsG-t4-bry"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addIngredientPromptLabel" destination="Gnn-uV-R7I" id="a5p-0g-R43"/>
+                        <outlet property="addIngredientSearchBar" destination="e8j-M3-G8i" id="f0Q-CT-Hq4"/>
                         <outlet property="listNamePromptLabel" destination="5Sl-9f-LEI" id="6Gx-dp-PGY"/>
                         <outlet property="listTitleLabel" destination="ZgP-P7-KPe" id="Pps-Pn-84e"/>
                         <outlet property="newNamePromptLabel" destination="abp-jS-cY7" id="pj1-VO-nQe"/>
                         <outlet property="newNameTextField" destination="B2v-yj-H7K" id="st4-xZ-GMG"/>
+                        <outlet property="searchTableView" destination="dCe-Xk-lEw" id="FAG-RH-Hyv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pu8-JM-735" userLabel="First Responder" sceneMemberID="firstResponder"/>
